add callforabstract, update brochure, add speakers, complete committee, format title

--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -50,22 +50,105 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    CONTACT US
+                    BROAD AREAS
                 </h1>
                 <div class="head">
                     <p></p>
                     <div class="line"></div>
                 </div>
-                <div class="container">
-                    <div class="content-gray" style="display: block;">
-                        <p>Prof. Rachana - <a href="tel:919315434437">+91-9315434437</a></p>
-                        <p>Dr. Shazia Haider - <a href="tel:919811930241">+91-9811930241</a></p>
-                       <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
-                       <br>
-                       <a href="mailto:conference2022@jiiticabb.com">Or at conference2022@jiiticabb.com</a>
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">SESSION I: Computational Biology and Applications</h2>
+                    <div class="content-gray">
+                        <ul class="ul-guidelines">
+                            <li>Synthetic biology</li>
+                            <li>Omics</li>
+                            <li>Molecular Docking</li>
+                            <li>Molecular Modelling/Simulation</li>
+                            <li>Chemo informatics</li>
+                            <li>Drug designing</li>
+                            <li>Systems Biology</li>
+                            <li>NGS</li>
+                            <li>Personalized medicine</li>
+                        </ul>
                     </div>
+                </div>
+
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">SESSION II: Medical and Microbial Biotechnology </h2>
+                    <div class="content-gray" >
+                        <ul class="ul-guidelines">
+                            <li>Host- pathogen interactions</li>
+                            <li>Genetic disorders</li>
+                            <li>Life style disorders
+
+                            </li>
+                            <li>Diagnostics and treatment
+
+                            </li>
+                            <li>Stem Cells Therapy
+
+                            </li>
+                            <li>Translational Medicine
+
+                            </li>
+                            <li>Vaccines and Antibiotics
+
+                            </li>
 
 
+                        </ul>
+
+
+                    </div>
+                </div>
+
+
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">SESSION III: Food, Agriculture and Natural Products</h2>
+                    <div class="content-gray">
+                        <ul class="ul-guidelines">
+                            <li>Bio-fertilizers and Bio-pesticides</li>
+                            <li>Food Biotechnology</li>
+                            <li>Plant Biotechnology</li>
+                            <li>Animal husbandry</li>
+                            <li>Natural products</li>
+
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">SESSION IV: Environmental and Industrial Biotechnology</h2>
+                    <div class="content-gray">
+                        <ul class="ul-guidelines">
+                            <li>Environmental Biotechnology</li>
+                            <li>Enzyme Technology</li>
+                            <li>Molecular Docking</li>
+                            <li>Bioremediation</li>
+                            <li>Bio resources</li>
+                            <li>Bio fuels</li>
+                            <li>Product development</li>
+                            <li>Innovative products in Biotechnology</li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">SESSION V: Nanotechnology and Drug Delivery</h2>
+                    <div class="content-gray">
+                        <ul class="ul-guidelines">
+                            <li>Nanomaterials</li>
+                            <li>Diagnostics</li>
+                            <li>Biosensors</li>
+                            <li>Nano-formulations</li>
+                            <li>Targeted drug delivery</li>
+                            <li>Nano-remediation</li>
+
+
+                        </ul>
+                    </div>
                 </div>
 
 
@@ -73,7 +156,7 @@
 
             </div>
         </div>
-        <div class="title">CONTACT</div>
+        <div class="title">BROADAREAS</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
             <img src="img/blue/blueShapeSide2.png" />
         </div>
@@ -83,22 +166,21 @@
             <img src="img/cloud.png" />
             <div class="footer">
                 <div class="social">
-                    <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
+                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
-                <div class="credit">
-                    <p>&copy ICABB JIIT 2022</p>
-                    <div class="line"></div>
-                    <p>
-                        DESIGNED AND DEVELOPED WITH
-                        <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
-                        BY
-                        <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
-                    </p>
-                </div>
+                <p>&copy ICABB JIIT 2022</p>
+                <div class="line"></div>
+                <p>
+                    DESIGNED AND DEVELOPED WITH
+                    <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
+                    BY
+                    <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                </p>
+            </div>
             </div>
         </footer>
     </content>
