--- a/index.html
+++ b/index.html
@@ -63,26 +63,30 @@
         </div> -->
         <img class="logo" src="assets/logo.png" alt="" />
         <img class="logo1" src="assets/logo1.png" alt="" />
-        <div class="main-header-div">
-          <p style="margin-bottom: 0; font-size: 2.5rem; font-family: 'Roboto Slab', serif;">
+        <div class="main-header-div" style="margin-top:10%;">
+          <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
             INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
-          </p>
+
           <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
           <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
           </p> -->
-          <p style="margin-bottom: 0; font-size: 2.5rem; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+          <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
 
         </div>
-        <div class="navigation">
+        <div class="navigation container">
           <div class="navtab">
             <ul>
               <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
               <li class="list-item"><a class="navbar" href="guidelines">GUIDELINES</a></li>
-              <li class="list-item"><a class="navbar" href="ICABB-2021-Brochure.pdf" target="_blank">VIEW BROCHURE</a></li>
+              <li class="list-item"><a class="navbar" href="callForAbstract.html">CALL FOR ABSTRACT</a></li>
+              <li class="list-item"><a class="navbar" href="Brochure-ICABB-2022-2.docx" target="_blank">VIEW BROCHURE</a></li>
               <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
-              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
               <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
+              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
+              <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
+              <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
+
             </ul>
           </div>
 
@@ -104,9 +108,9 @@
     </div>
 
 
-    <div class="main-wrap">
+    <div class="main-wrap past-photo">
       <div class="content">
-        <h1 style="
+        <!-- <h1 style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
               background-clip: border-box;
               background-clip: border-box;
@@ -114,7 +118,7 @@
               -webkit-text-fill-color: transparent;
             ">
           PAST EVENTS
-        </h1>
+        </h1> -->
         <div class="head">
           <p></p>
           <div class="line"></div>
@@ -171,26 +175,72 @@
           About
         </h1>
         <div class="head">
-          <p>ICABB 2021.</p>
+          <p>The Institute</p>
           <div class="line"></div>
         </div>
         <div class="text">
-          The International E-Conference on Advances in Biosciences and
-          Biotechnology (ICABB-2021) aims to unite multi- disciplinary fields
-          of biology, biosciences, and medical biotechnology on a single
-          platform. It will provide a platform to bring academicians,
-          researchers, scholars, technocrats from academia and industry to
-          share their ideas, knowledge, and experience. This is the 6th
-          International conference being organized by the Department of
-          Biotechnology.
+          Jaypee Institute of Information Technology (JIIT), Noida
+          was established in the year 2001 and has been constantly
+          ranked among the top engineering Institutes in Delhi NCR.
+          JIIT has been accredited and approved by AICTE, NIRF, MHRD
+          and has continued to become a centre of excellence in
+          emerging areas of science and technology.
           <br /><br />
-          <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
+          <!-- <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
           Virtual.<br />
           <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
           Speakers from around the globe.<br />
-          <a href="about"><button>Know more</button></a>
+          <a href="about"><button>Know more</button></a> -->
+
+
+
         </div>
-        <div>
+
+        <div class="head">
+          <p>The Department</p>
+          <div class="line"></div>
+        </div>
+
+        <div class="text">
+          The Department of Biotechnology at JIIT, NOIDA
+          established in 2002, remains committed to provide
+          research-informed teaching and learning, and vibrant
+          R&D environment. Faculty with rich research exposure
+          in academia and industry, both in India and abroad,
+          contributes to the department academic core.
+          <br /><br />
+
+        </div>
+
+
+        <div class="head">
+          <p>The Conference</p>
+          <div class="line"></div>
+        </div>
+
+        <div class="text">
+          “5th International Conference on Advances in
+           Biosciences and Biotechnology (ICABB-2022)”
+           on Innovations in life sciences and computational
+           biology from 20 to 22 Jan, 2022 will be an amalgamation
+           of multi-disciplinary fields of Biotechnology providing
+           opportunities for exchange of ideas, scientific knowledge
+           and experience amongst researchers, academicians, scientists
+          and students from Biological, Medical, Environmental,
+          Agricultural and Computational fields.
+          The scientific program will include plenary/ keynote lectures along
+          with oral and poster presentation under 5 major themes focusing on
+          breakthroughs in Biological Sciences, Computational approaches in
+          Biotechnology, Genetics, Environmental, Microbial and Agricultural
+          Biotechnology as well as, other upcoming current technological
+          advancements in the field of Lifesciences.
+          <br /><br />
+
+        <!-- <a href="about"><button>Know more</button></a> -->
+        </div>
+
+
+        <!-- <div> -->
           <!-- <ul class="timeline">
                      <li>
                         <div class="direction-r">
@@ -225,7 +275,7 @@
                         </div>
                      </li>
                   </ul> -->
-        </div>
+        <!-- </div> -->
       </div>
 
 
@@ -482,10 +532,10 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-          10.
+          FAQs
         </h1>
         <div class="head">
-          <p>FAQs</p>
+          <!-- <p>FAQs</p> -->
           <div class="line"></div>
         </div>
         <div class="track">
