--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -31,7 +31,7 @@
 <body>
     <nav class="navbar navbar-light bg-transparent">
         <a class="navbar-brand" href="index"><i class="fa fa-chevron-left" style="margin-right: 10px;"
-                aria-hidden="true"></i>ICABB JIIT 2021</a>
+                aria-hidden="true"></i>ICABB JIIT 2022</a>
     </nav>
     <lines>
         <div class="wrap"></div>
@@ -41,6 +41,9 @@
         <div class="wrap"></div>
     </lines>
     <content>
+
+
+
         <div class="main-wrap">
             <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
                 <h1 style="
@@ -50,15 +53,101 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    ABOUT
+                    COMMITTEE
                 </h1>
                 <div class="head">
                     <p>WHO WE ARE.</p>
                     <div class="line"></div>
                 </div>
 
+  <div>
 
-                <div class="container">
+  <h1 style="margin-top: 10%; font-size: 300%;">PATRONS</h1>
+                <div class="team-row">
+
+                  <div class="judges img">
+                    <img src="assets/Speaker1.jpg" />
+                    <div class="team-content">
+                      <h1>Prof. S. C. Saxena</h1>
+                      <br />
+                      <p>
+                        <br />Vice Chancellor, JIIT, Noida
+
+                      </p>
+                    </div>
+                  </div>
+                  <!-- <div class="judges img right">
+                    <img src="assets/speaker2.jpg" />
+                    <div class="team-content">
+                      <h1>Dr. Amulya K. Panda</h1>
+                      <br />
+                      <p>
+                        Director, National Institute of Immunology, New Delhi, India
+                      </p>
+                    </div>
+                  </div> -->
+                </div>
+    </div>
+    <div>
+
+    <h1 style="margin-top: 10%; font-size: 300%;">CONFERENCE CHAIRPERSON</h1>
+                  <div class="team-row">
+
+                    <div class="judges img">
+                      <img src="assets/Speaker1.jpg" />
+                      <div class="team-content">
+                        <h1>Prof. Pammi Gauba</h1>
+                        <br />
+                        <p>
+                          <br />HOD, Biotechnology Department, JIIT, Noida
+                        </p>
+                      </div>
+                    </div>
+                    <!-- <div class="judges img right">
+                      <img src="assets/speaker2.jpg" />
+                      <div class="team-content">
+                        <h1>Dr. Amulya K. Panda</h1>
+                        <br />
+                        <p>
+                          Director, National Institute of Immunology, New Delhi, India
+                        </p>
+                      </div>
+                    </div> -->
+                  </div>
+      </div>
+      <div>
+
+      <h1 style="margin-top: 10%; font-size: 300%;">ORGANISING SECRETARY</h1>
+                    <div class="team-row" style="margin-bottom:400px;">
+
+                      <div class="judges img">
+                        <img src="assets/org1.jpeg" />
+                        <div class="team-content">
+                          <h1>Prof. Rachana</h1>
+                          <br />
+                          <p>
+                            <br />Biotechnology Department, JIIT, Noida
+                          </p>
+                        </div>
+                      </div>
+                      <div class="judges img right">
+                        <img src="assets/speaker2.jpg" />
+                        <div class="team-content">
+                          <h1>Dr. Shazia Haider</h1>
+                          <br />
+                          <p>
+                            Biotechnology Department, JIIT, Noida
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+        </div>
+
+
+
+                </div>
+
+                <!-- <div class="container">
                     <h2 class="text-center">GET TO KNOW ABOUT ICABB 2021 EVENT</h2>
                     <div class="content-gray">
 
@@ -93,10 +182,10 @@
                             acquainted with novel or alternative strategies to seek an answer to various global
                             challenges.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="container" style="margin-top: 30px;">
-                    <h2>IMPORTANT DATES</h2>
+                    <!-- <h2>IMPORTANT DATES</h2>
                     <table class="table">
                         <tbody>
                             <tr>
@@ -112,87 +201,71 @@
                                 <th>January 28th-30th, 2021</th>
                             </tr>
                         </tbody>
-                    </table>
-                    <img src="assets/c11.jpeg" class="img-fluid" alt="">
+                    </table> -->
+
+
+
 
                     <div class="content-gray" style="margin-top: 40px;">
                         <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
                         </h6>
-                        <h3>PATRON</h3>
-                        <p>Shri Manoj Gaur Ji, Chancellor
-                        </p>
-                        <p>Prof. S. C. Saxena, Vice Chancellor, JIIT, Noida
-                        </p>
 
-                        <h3>CONFERENCE CHAIRPERSON</h3>
-                        <p>Prof. Pammi Gauba
-                        </p>
 
-                        <h3>CONFERENCE CONVENERS</h3>
-                        <p>Prof. Reema Gabrani
-                        </p>
-                        <p>Dr. Garima Mathur
-                        </p>
-
-                        <h3>ADVISORY COMMITTEE</h3>
-                        <p>Prof. Hari Om Gupta (Director, JIIT-128)
-                        </p>
-                        <p>Prof. D. K. Rai (Dean A&R, JIIT)
-                        </p>
-                        <p>Dr. Amulya K. Panda (NII, N. Delhi)
-                        </p>
-                        <p>Prof. Monika Sachdeva (RKGIT, Ghaziabad)
-                        </p>
-                        <p>Prof. Nilesh Sharma (Dr. D. Y. Patil Vidyapeeth, Pune)
-                        </p>
-                        <p>Dr. Gopal Krishnan (Promega, WI, USA)
+                        <!-- <p>Dr. Gopal Krishnan (Promega, WI, USA)
                         </p>
                         <p>Dr. Manjula Kalia (RCB, Faridabad)
-                        </p>
+                        </p> -->
 
                         <h3>TECHNICAL COMMITTEE</h3>
                         <p>Prof. Neeraj Wadhwa
                         </p>
-                        <p>Prof. S. Krishna Sundari
+                        <p>Prof. Vibha Rani
                         </p>
                         <p>Prof. Sujata Mohanty
                         </p>
-                        <p>Prof. Sudha Srivastava
+                        <p>Dr. Smriti Gaur
                         </p>
-                        <p>Dr. Chakresh K. Jain
+                        <!-- <p>Dr. Chakresh K. Jain
                         </p>
                         <p>Dr. Manisha Singh
-                        </p>
+                        </p> -->
 
                         <h3>ADMINISTRATIVE COMMITTEE</h3>
-                        <p>Prof. Vibha Rani
+                        <p>Prof. Sudha Srivastava
                         </p>
-                        <p>Dr. Shweta Dang
+                        <p>Prof. S Krishna Sundari
                         </p>
                         <p>Dr. Ashwani Mathur
                         </p>
                         <p>Dr. Vibha Gupta
                         </p>
-                        <p>Dr. Smriti Gaur
+                        <p>Prof. Indira P Sarethy
                         </p>
                         <p>Dr. Priyadarshini
                         </p>
-                        <p>Dr Shazia Haider
+                        <p>Dr Garima Mathur
                         </p>
                         <p>Dr. Sonam Chawla
                         </p>
                         <p>Ms. Ekta Bhatt
                         </p>
+                        <p>Dr. Chakresh Kumar Jain</p>
+                        <p>Dr. Manisha Singh</p>
+                        <p>Prof. Reema Gabrani</p>
+                        <p>Dr Shalni Mani</p>
+                        <p>Dr. S Bhattacharya</p>
+                        <p>Dr. Shweta Dang</p>
 
-                        <h3>FINANCE COMMITTEE</h3>
+
+                        <!-- <h3>FINANCE COMMITTEE</h3>
                         <p>Dr. Indira P Sarethy
                         </p>
                         <p>Dr. Shalini Mani
-                        </p>
+                        </p> -->
                     </div>
                     <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                         style="margin-top: 40px;">
-                        <div class="row w-100">
+                        <!-- <div class="row w-100">
                             <div class="col d-flex flex-column justify-content-center align-items-center">
                                 <h2 style="color: #145dbb;">11</h2>
                                 <h5>SPEAKERS</h5>
@@ -205,15 +278,15 @@
                                 <h2 style="color: #145dbb;">60</h2>
                                 <h5>SESSIONS</h5>
                             </div>
-                        </div>
-                        <a href="registration"><button>REGISTER NOW</button></a>
+                        </div> -->
+                        <!-- <a href="registration"><button>REGISTER NOW</button></a> -->
                         <a href="contact-us"><button>CONTACT US</button></a>
 
                     </div>
                 </div>
             </div>
         </div>
-        <div class="title">ABOUT</div>
+        <div class="title">ORGANISING</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
             <img src="img/blue/blueShapeSide2.png" />
         </div>
@@ -231,7 +304,7 @@
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <p>&copy ICABB JIIT 2021</p>
+                    <p>&copy ICABB JIIT 2022</p>
                     <div class="line"></div>
                     <p>
                         DESIGNED AND DEVELOPED WITH
@@ -241,6 +314,7 @@
                     </p>
                 </div>
             </div>
+
         </footer>
     </content>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
