--- a/speakers.html
+++ b/speakers.html
@@ -59,9 +59,9 @@
           </div>
           <div class="team-row">
             <div class="judges img">
-              <img src="assets/Speaker1.jpg" />
+              <img src="assets/Prof Anirban Chakraborti.jpg" />
               <div class="team-content">
-                <h1>Dr. Subrata Sinha</h1>
+                <h1>Prof. Anirban Chakraborti</h1>
                 <br />
                 <p>
                   <br />Professor and Head, Department of Biochemistry, All
@@ -70,9 +70,9 @@
               </div>
             </div>
             <div class="judges img right">
-              <img src="assets/speaker2.jpg" />
+              <img src="assets/Prof Pawan Dhar.jpg" />
               <div class="team-content">
-                <h1>Dr. Amulya K. Panda</h1>
+                <h1>Prof. Pawan Dhar</h1>
                 <br />
                 <p>
                   Director, National Institute of Immunology, New Delhi, India
@@ -80,9 +80,9 @@
               </div>
             </div>
             <div class="judges img">
-              <img src="assets/speaker12.jpg" />
+              <img src="assets/Prof. Rup Lal.jfif" />
               <div class="team-content">
-                <h1>Prof. Subhash Chand</h1>
+                <h1>Prof. Rup Lal</h1>
                 <br />
                 <p>
                   Professor Emeritus, Department of Biochemical Engineering and
@@ -91,9 +91,9 @@
               </div>
             </div>
             <div class="judges img right">
-              <img src="assets/speaker4.jpg" />
+              <img src="assets/Prof Yogender singh.jfif" />
               <div class="team-content">
-                <h1>Dr. Esther Vazquez</h1>
+                <h1>Prof. Yogender singh</h1>
                 <br />
                 <p>
                   Associate Professor, Universidad Autónoma de Barcelona, Spain
