--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-transparent">
-        <a class="navbar-brand" href="/"><i class="fa fa-chevron-left" style="margin-right: 10px;"
+        <a class="navbar-brand" href="index"><i class="fa fa-chevron-left" style="margin-right: 10px;"
                 aria-hidden="true"></i>ICABB JIIT 2022</a>
     </nav>
     <lines>
@@ -50,33 +50,59 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    CONTACT US
+                    COMMITTEE
                 </h1>
                 <div class="head">
-                    <p></p>
+                    <p>WHO WE ARE.</p>
                     <div class="line"></div>
                 </div>
-                <div class="container">
-                    <div class="content-gray" style="display: block;">
-                        <p>Prof. Rachana - <a href="tel:919315434437">+91-9315434437</a></p>
-                        <p>Dr. Shazia Haider - <a href="tel:919811930241">+91-9811930241</a></p>
-                       <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
-                       <br>
-                       <a href="mailto:conference2022@jiiticabb.com">Or at conference2022@jiiticabb.com</a>
+
+
+
+
+                <div class="container" style="margin-top: 30px;">
+
+                    <div class="content-gray" style="margin-top: 40px;">
+                        <!-- <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
+                        </h6> -->
+                        <h3>ADVISORY COMMITTEE</h3>
+                        <p>Prof. Hari Om Gupta (Director, JIIT-128)
+                        </p>
+                        <p>Prof. D. K. Rai (Dean A&R, JIIT)
+                        </p>
+                        <p>Prof Jayesh Bellare IIT Bombay
+                        </p>
+                        <p>Dr D K Gupta Founder Felix Hospital Noida
+                        </p>
+                        <p>Prof S Panda, IIT Kanpur
+                        </p>
                     </div>
+                    <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
+                        style="margin-top: 40px;">
+                        <!-- <div class="row w-100">
+                            <div class="col d-flex flex-column justify-content-center align-items-center">
+                                <h2 style="color: #145dbb;">11</h2>
+                                <h5>SPEAKERS</h5>
+                            </div>
+                            <div class="col d-flex flex-column justify-content-center align-items-center">
+                                <h2 style="color: #145dbb;">5</h2>
+                                <h5>TRACKS</h5>
+                            </div>
+                            <div class="col d-flex flex-column justify-content-center align-items-center">
+                                <h2 style="color: #145dbb;">60</h2>
+                                <h5>SESSIONS</h5>
+                            </div>
+                        </div> -->
+                        <!-- <a href="registration"><button>REGISTER NOW</button></a> -->
+                        <a href="contact-us"><button>CONTACT US</button></a>
 
-
+                    </div>
                 </div>
-
-
-
-
             </div>
         </div>
-        <div class="title">CONTACT</div>
+        <div class="title">ADVISORY</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
             <img src="img/blue/blueShapeSide2.png" />
-        </div>
         </div>
 
         <footer>
@@ -86,7 +112,8 @@
                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i
+                            class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
