--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
             INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
 
-          <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
-          <!-- <p style="margin-bottom: 0; font-size: 2rem">
+            <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
+            <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
           </p> -->
-          <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+            <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
 
         </div>
-        <div class="navigation container">
+        <div class="navigation container-fluid">
           <div class="navtab">
             <ul>
               <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
@@ -109,7 +109,8 @@
 
 
     <div class="main-wrap past-photo">
-      <div class="content">
+      <div class="content" style="width:90%;">
+
         <!-- <h1 style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
               background-clip: border-box;
@@ -119,30 +120,140 @@
             ">
           PAST EVENTS
         </h1> -->
-        <div class="head">
+        <!-- <div class="head">
           <p></p>
           <div class="line"></div>
-        </div>
-        <div class="container">
+        </div> -->
+        <div class="container-fluid">
           <div class="car-container">
             <div class="car-container-inner">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+
+                  <div class="carousel-item active item">
                     <img src="assets/c7.jpeg" class="d-block w-100 car-img" alt="..." />
                   </div>
+                  <table class="table table-hover impDates">
+                    <thead>
+                      <tr>
+                        <th>IMPORTANT DATES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="impItem">Last date of Abstract Submission:</td>
+                        <td class="impItem">15 December,2021</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Acceptance notice:</td>
+                        <td class="impItem">Within 2 weeks of Submission</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Last date of Registration:</td>
+                        <td class="impItem">24 December,2021</td>
+                      </tr>
+                    </tbody>
+                  </table>
                   <div class="carousel-item">
                     <img src="assets/c8.jpeg" class="d-block w-100 car-img" alt="..." />
                   </div>
+
+                  <table class="table table-hover impDates">
+                    <thead>
+                      <tr>
+                        <th>IMPORTANT DATES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="impItem">Last date of Abstract Submission:</td>
+                        <td class="impItem">15 December,2021</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Acceptance notice:</td>
+                        <td class="impItem">Within 2 weeks of Submission</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Last date of Registration:</td>
+                        <td class="impItem">24 December,2021</td>
+                      </tr>
+                    </tbody>
+                  </table>
                   <div class="carousel-item">
                     <img src="assets/c9.jpeg" class="d-block w-100 car-img" alt="..." />
+
                   </div>
+                  <table class="table table-hover impDates">
+                    <thead>
+                      <tr>
+                        <th>IMPORTANT DATES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="impItem">Last date of Abstract Submission:</td>
+                        <td class="impItem">15 December,2021</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Acceptance notice:</td>
+                        <td class="impItem">Within 2 weeks of Submission</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Last date of Registration:</td>
+                        <td class="impItem">24 December,2021</td>
+                      </tr>
+                    </tbody>
+                  </table>
                   <div class="carousel-item">
                     <img src="assets/c10.jpeg" class="d-block w-100 car-img" alt="..." />
+
                   </div>
+                  <table class="table table-hover impDates">
+                    <thead>
+                      <tr>
+                        <th>IMPORTANT DATES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="impItem">Last date of Abstract Submission:</td>
+                        <td class="impItem">15 December,2021</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Acceptance notice:</td>
+                        <td class="impItem">Within 2 weeks of Submission</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Last date of Registration:</td>
+                        <td class="impItem">24 December,2021</td>
+                      </tr>
+                    </tbody>
+                  </table>
                   <div class="carousel-item">
                     <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
+
                   </div>
+                  <table class="table table-hover impDates">
+                    <thead>
+                      <tr>
+                        <th>IMPORTANT DATES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="impItem">Last date of Abstract Submission:</td>
+                        <td class="impItem">15 December,2021</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Acceptance notice:</td>
+                        <td class="impItem">Within 2 weeks of Submission</td>
+                      </tr>
+                      <tr>
+                        <td class="impItem">Last date of Registration:</td>
+                        <td class="impItem">24 December,2021</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -152,6 +263,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
+
               </div>
             </div>
           </div>
@@ -162,9 +274,9 @@
         <img src="img/blue/blueShapeSide.png" />
       </div>
     </div>
-<!--  -->
+    <!--  -->
     <div class="main-wrap">
-      <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" >
+      <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
         <h1 style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
               background-clip: border-box;
@@ -220,12 +332,12 @@
 
         <div class="text">
           “5th International Conference on Advances in
-           Biosciences and Biotechnology (ICABB-2022)”
-           on Innovations in life sciences and computational
-           biology from 20 to 22 Jan, 2022 will be an amalgamation
-           of multi-disciplinary fields of Biotechnology providing
-           opportunities for exchange of ideas, scientific knowledge
-           and experience amongst researchers, academicians, scientists
+          Biosciences and Biotechnology (ICABB-2022)”
+          on Innovations in life sciences and computational
+          biology from 20 to 22 Jan, 2022 will be an amalgamation
+          of multi-disciplinary fields of Biotechnology providing
+          opportunities for exchange of ideas, scientific knowledge
+          and experience amongst researchers, academicians, scientists
           and students from Biological, Medical, Environmental,
           Agricultural and Computational fields.
           The scientific program will include plenary/ keynote lectures along
@@ -236,12 +348,12 @@
           advancements in the field of Lifesciences.
           <br /><br />
 
-        <!-- <a href="about"><button>Know more</button></a> -->
+          <!-- <a href="about"><button>Know more</button></a> -->
         </div>
 
 
         <!-- <div> -->
-          <!-- <ul class="timeline">
+        <!-- <ul class="timeline">
                      <li>
                         <div class="direction-r">
                            <div class="flag-wrapper">
