add speaker, make brochure page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div> -->
         <img class="logo" src="assets/logo.png" alt="" />
         <img class="logo1" src="assets/logo1.png" alt="" />
-        <div class="main-header-div" style="margin-top:10%;">
+        <div class="main-header-div">
           <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
             INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
 
@@ -80,13 +80,13 @@
               <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
               <li class="list-item"><a class="navbar" href="guidelines">GUIDELINES</a></li>
               <li class="list-item"><a class="navbar" href="callForAbstract.html">CALL FOR ABSTRACT</a></li>
-              <li class="list-item"><a class="navbar" href="Brochure-ICABB-2022-2.docx" target="_blank">VIEW BROCHURE</a></li>
+              <li class="list-item"><a class="navbar" href="brochure.html">VIEW BROCHURE</a></li>
               <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
               <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
               <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
               <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
               <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
-
+              <!-- target="_blank" -->
             </ul>
           </div>
 
@@ -216,16 +216,16 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td class="impItem">Last date of Abstract Submission:</td>
-                        <td class="impItem">15 December,2021</td>
+                        <td>Last date of Abstract Submission:</td>
+                        <td>15 December,2021</td>
                       </tr>
                       <tr>
-                        <td class="impItem">Acceptance notice:</td>
-                        <td class="impItem">Within 2 weeks of Submission</td>
+                        <td>Acceptance notice:</td>
+                        <td>Within 2 weeks of Submission</td>
                       </tr>
                       <tr>
-                        <td class="impItem">Last date of Registration:</td>
-                        <td class="impItem">24 December,2021</td>
+                        <td>Last date of Registration:</td>
+                        <td>24 December,2021</td>
                       </tr>
                     </tbody>
                   </table>
