--- a/speakers.html
+++ b/speakers.html
@@ -101,9 +101,9 @@
               </div>
             </div>
             <div class="judges img">
-              <img src="assets/speaker5.jpg" />
+              <img src="assets/Dr. N. S. Punekar.jpg" />
               <div class="team-content">
-                <h1>Prof. Sridhar Hannenhalli</h1>
+                <h1>Dr. N. S. Punekar</h1>
                 <br />
                 <p>
                   <br />Senior Investigator, Cancer Data Science Laboratory,
@@ -111,7 +111,7 @@
                 </p>
               </div>
             </div>
-            <div class="judges img right">
+            <!-- <div class="judges img right">
               <img src="assets/speaker6.jpg" />
               <div class="team-content">
                 <h1>Prof. Pravindra Kumar</h1>
@@ -178,7 +178,7 @@
                   Delhi
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
