try brochure fix

--- a/brochure.html
+++ b/brochure.html
@@ -59,8 +59,8 @@
                 <div class="container">
                     <div class="content-gray" style="display: block;">
                         <h2>Full Length Papers</h2>
-                        <img class="jp-img" src="assets/brochure-page-1.png" style="width:90%;" alt="">
-                        <img class="jp-img" src="assets/brochure-page-2.png" style="width:90%;" alt="">
+                        <img class="jp-img" src="https://utkarsh-crypto.github.io/icabbjiit/assets/brochure-page-1.png" style="width:90%;" alt="">
+                        <img class="jp-img" src="https://utkarsh-crypto.github.io/icabbjiit/assets/brochure-page-2.png" style="width:90%;" alt="">
                         <br>
                         <br>
                         <br>
